# auto-structured-output

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
auto_structured_output/: __init__.py  extractor.py  model.py  model_builder.py  prompts.py  schema_generator.py  validators.py
examples/: advanced_examples.py  basic_usage.py  high_reasoning_examples.py
examples/schemas/advanced_examples/: complex_article.json  order_system.json  organization.json  payment_methods.json  product_specification.json  user_profile.json
examples/schemas/basic_usages/: book_with_optional_fields.json  course_with_array_fields.json  event_with_datetime_fields.json  product_with_enum.json  simple_user_model.json
examples/schemas/high_reasoning_examples/: customer_feedback_analysis.json  financial_transaction_analysis.json  high_reasoning.json  job_application_evaluation.json  meeting_summary.json  research_paper_metadata.json
schemas/: complex_article.json  course_with_array_fields.json  event_with_datetime_fields.json  order_system.json  organization.json  payment_methods.json  product_specification.json  product_with_enum.json  simple_user_model.json  user_profile.json
tests/: conftest.py  test_extractor.py  test_model_builder.py  test_schema_generator.py  test_validators.py
